fix jump to section, add numbers, highlight work names, rem full desc offset to the right

--- a/main.css
+++ b/main.css
@@ -574,26 +574,21 @@ a h2 {
 .descriptions {
   max-width: 44rem;
   margin: 0 auto 5rem;
-  /* border-top: 1px solid; */
 }
 
 .descriptions>li {
   list-style: none;
-  /* margin: 2rem 0; */
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  /* border-bottom: 1px solid; */
+  padding: 1rem;
   display: none;
 }
 
 .descriptions>li>div:first-child {
   display: grid;
   gap: 1rem;
-  grid-template-columns: 4rem 3fr 2fr 3fr;
+  grid-template-columns: 3fr 3fr 3fr;
 }
 
 .full-description {
-  margin-left: 5rem;
   margin-top: 1rem;
 }
 
@@ -614,9 +609,8 @@ a h2 {
 
 .collapsible {
   background-color: var(--accent-2);
-  /* color: var(--accent); */
   cursor: pointer;
-  padding: 18px;
+  padding: 1rem;
   width: 100%;
   border: none;
   text-align: left;
